# IaPM_WcS

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
Dojo/week2/: restite_readme.md  workshop.md
Dojo/week3/: re.md
Dojo/week5/: bibliotheque.py  test_library.py
Dojo/week6/: dojo6.ipynb  dojo6.md
Quetes/week1/: pep8_Readme.md  test_pep8_corrected.py
Quetes/week1/Numpy/: 01_Numpy_Introduction.ipynb  02_Numpy_Vs_Python.ipynb  03_Numpy_Slicing.ipynb
Quetes/week1/Pandas/: 1_1_Pandas_Introduction_to_DataFrames.ipynb  1_2_Pandas_Slicing.ipynb  1_3_Pandas_Filtering.ipynb  1_4_Date_and_Time_with_Python_and_Pandas.ipynb
Quetes/week1/Pep8/: test_pep8.py
Quetes/week11/DBT_DEMO/: README.md  init_db.py
Quetes/week12/: docker_intro.md
Quetes/week12/quete_dockerfile/: Dockerfile  hello_wilder.sh
Quetes/week12/quete_dockervolume/: nginx_awadi_bedja.sh
Quetes/week12/quete_dockerweb/: deploy_stack.sh
Quetes/week12/wordpress-docker/: README.md  docker-compose.yml
Quetes/week2/: Merged_nbk.py  readme_merge_nbk.md
Quetes/week7/: ACP.ipynb  Grid_Search_ARIMA_Models.ipynb  Intro_ARIMA.ipynb  Standardize_your_data.ipynb  anomaly_detection.ipynb  cross_val.ipynb  grid_search_.ipynb
Quetes/week8/: bagofwords.ipynb  nlp1.ipynb  nlp2.ipynb  nlp3.ipynb  sentiment_analysis.ipynb  tfldf.ipynb
Quetes/week9/: Building_Perceptrons_with_Scikit_Learn.ipynb  Building_a_VGG16_CNN_network.ipynb  Liveco_CNN_with_TensorFlow_and_Keras.ipynb  Loss Functions.ipynb  Quest_ImageAI.ipynb  Quest_NN_1.ipynb  ROC_AUC_Challenge.ipynb
Veille_Tech/: pipedream.md
(+61 files in other folders)
