[tool.poetry]
name = "env-cpia"
version = "0.1.0"
description = ""
authors = ["bms-awadi <b.awadi@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
jupyter = "^1.1.1"
bokeh = "^3.6.1"
bokeh-sampledata = "^2024.2"
jinja2 = "^3.1.4"
contours = "^0.0.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
vizro = "^0.1.26"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
